# haloplatform

./: .env.example  .gitignore  DEPLOYMENT_COMPLETE.md  Dockerfile  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  REDACTION_POLICY.md  TEST_RESULTS_FINAL.md  TEST_SUMMARY.md  alembic.ini  docker-compose.yml  halo_vision.md  pyproject.toml
.github/workflows/: check-secrets.yml  ci.yml
allabolag/: __init__.py  database.py  load_scb_orgnrs.py  orchestrator.py  parser.py  readme.md  requirements.txt  tech_spec.md  test_orgnrs.txt  test_run.py
allabolag_scraper/: __main__.py  config.py  main.py
allabolag_scraper/db/: connection.py  schema.sql
allabolag_scraper/scraper/: orchestrator.py  parser_company.py  parser_person.py  worker.py
allabolag_scraper/seed/: loader.py
data/: allabolag.db-shm  arsredovisning_5592584386.xhtml  company_graph.pickle  directors.db-shm  unified.db-shm
data/bolagsverket_enrichment/: progress.json  results.json
data/extraction_100/: progress.json  results.json  stats.json
data/extraction_1000/: pdf_progress.json  pdf_stats.json  progress.json  results.json  stats.json
data/extraction_combined/: results.json  stats.json
data/extraction_new_batch/: progress.json  results.json  stats.json
data/extraction_scb/: progress.json  results.json
data/test_559_extraction/: progress.json  results.json  stats.json
data/test_extraction/: progress.json  (+1 more)
docs/: api_findings.md  detection_methodology.md  ontology.md
scripts/: analyze_directors.py  baseline_tuning.py  batch_extract.py  batch_extract_pdf.py  bolagsverket_full_enrich.py  create_unified_db.py  cross_reference_icij.py  demo_server.py  enrich_with_scb.py  enumerate_scb.py  extract_directors.py  generate_orgnrs.py  generate_production_keys.sh  import_bulk_files.py  json_to_sqlite.py  load_allabolag.py  load_and_analyze.py  load_sample_data.py  merge_bulk_data.py  prepare_demo_data.py  redact_data_sources.sh  run_formation_agent_analysis.py  run_sequence_detection.py  run_shell_scoring.py  scb_full_pull.py  smart_extract.py  start_test_env.sh  test_coverage.py  test_extraction_pipeline.py  test_hvd_api.py  test_scb.py  test_scb_559.py  test_scb_559_v2.py  test_scb_variables.py
tests/: __init__.py
(+263 files in other folders)
