[project]
name = "halo"
version = "0.1.0"
description = "Swedish-Sovereign Intelligence Platform for law enforcement and financial compliance"
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "starlette>=0.49.1",  # CVE-2025-62727
    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache/Queue
    "redis>=5.2.1",
    # HTTP client
    "httpx>=0.28.0",
    "aiohttp>=3.12.14",  # CVE-2024-52304, CVE-2025-53643
    "urllib3>=2.6.0",  # CVE-2025-66418, CVE-2025-66471
    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Security
    "python-jose[cryptography]>=3.4.0",  # PYSEC-2024-232, PYSEC-2024-233
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.1",  # Multiple CVEs including GHSA-h4gh-qq45-vh27
    "argon2-cffi>=23.1.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # NLP
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
    # Swedish-specific
    "flashtext>=2.7",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",  # PYSEC-2024-110
    # Search
    "elasticsearch>=8.17.0",
    # Database extensions
    "geoalchemy2>=0.14.0",
    "psycopg2-binary>=2.9.0",
    # Utility libraries (pinned for security)
    "werkzeug>=3.1.4",  # CVE-2025-66221
    "filelock>=3.20.1",  # CVE-2025-68146
    "brotli>=1.2.0",  # CVE-2025-6176
    "h2>=4.3.0",  # CVE-2025-57804
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
